@@ -37,6 +37,7 @@ import org.labkey.api.data.SQLFragment;
 import org.labkey.api.data.SqlExecutor;
 import org.labkey.api.data.TableInfo;
 import org.labkey.api.data.statistics.StatsService;
+import org.labkey.api.exp.ExperimentException;
 import org.labkey.api.exp.PropertyType;
 import org.labkey.api.exp.api.ExpProtocol;
 import org.labkey.api.exp.api.ExpRun;
@@ -70,6 +71,7 @@ import org.labkey.elisa.actions.ElisaUploadWizardAction;
 import org.labkey.elisa.plate.BioTekPlateReader;
 import org.springframework.web.servlet.ModelAndView;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -140,10 +142,10 @@ public class ElisaAssayProvider extends AbstractPlateBasedAssayProvider
     {
         BIOTEK(BioTekPlateReader.LABEL, BioTekPlateReader.class);
 
-        private String _label;
-        private Class _class;
+        private final String _label;
+        private final Class<? extends PlateReader> _class;
 
-        private PlateReaderType(String label, Class cls)
+        PlateReaderType(String label, Class<? extends PlateReader> cls)
         {
             _label = label;
             _class = cls;
@@ -158,9 +160,9 @@ public class ElisaAssayProvider extends AbstractPlateBasedAssayProvider
         {
             try
             {
-                return (PlateReader)_class.newInstance();
+                return _class.getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException | IllegalAccessException x)
+            catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException x)
             {
                 throw new RuntimeException(x);
             }
@@ -294,11 +296,11 @@ public class ElisaAssayProvider extends AbstractPlateBasedAssayProvider
     }
 
     @Override
-    public HttpView getDataDescriptionView(AssayRunUploadForm form)
+    public HttpView<?> getDataDescriptionView(AssayRunUploadForm form)
     {
-        if (form instanceof ElisaRunUploadForm)
+        if (form instanceof ElisaRunUploadForm eForm)
         {
-            if (((ElisaRunUploadForm)form).getSampleMetadataInputFormat() == SampleMetadataInputFormat.COMBINED)
+            if (eForm.getSampleMetadataInputFormat() == SampleMetadataInputFormat.COMBINED)
                 return new JspView<>("/org/labkey/assay/view/tsvDataDescription.jsp", form);
         }
         return new HtmlView(HtmlString.of("The ELISA data files must be in the BioTek Microplate Reader Excel file format (.xls or .xlsx extension)."));
@@ -409,7 +411,7 @@ public class ElisaAssayProvider extends AbstractPlateBasedAssayProvider
 
     public Domain getConcentrationWellGroupDomain(ExpProtocol protocol)
     {
-        return getDomainByPrefix(protocol, ASSAY_DOMAIN_DATA);
+        return getDomainByPrefix(protocol, ASSAY_DOMAIN_DATA, false);
     }
 
     @Override
@@ -429,7 +431,7 @@ public class ElisaAssayProvider extends AbstractPlateBasedAssayProvider
     }
 
     @Override
-    protected void moveAssayResults(List<ExpRun> runs, ExpProtocol protocol, Container sourceContainer, Container targetContainer, User user, AssayMoveData assayMoveData)
+    protected void moveAssayResults(List<ExpRun> runs, ExpProtocol protocol, Container sourceContainer, Container targetContainer, User user, AssayMoveData assayMoveData) throws ExperimentException
     {
         super.moveAssayResults(runs, protocol, sourceContainer, targetContainer, user, assayMoveData); // assay results
         List<Integer> runRowIds = runs.stream().map(ExpRun::getRowId).toList();
@@ -437,7 +439,7 @@ public class ElisaAssayProvider extends AbstractPlateBasedAssayProvider
         // move specimen
         String tableName = AssayProtocolSchema.DATA_TABLE_NAME;
         AssaySchema schema = createProtocolSchema(user, targetContainer, protocol, null);
-        FilteredTable assayResultTable = (FilteredTable) schema.getTable(tableName);
+        FilteredTable<?> assayResultTable = (FilteredTable<?>) schema.getTable(tableName);
         if (assayResultTable != null)
         {
             TableInfo expMaterialTable = ExperimentService.get().getTinfoMaterial();
